--- a/app/views/email-to-provider-after-rejected-from-LA.html
+++ b/app/views/email-to-provider-after-rejected-from-LA.html
@@ -21,15 +21,17 @@
       
 
 
-      <p><strong>Title: [applicant name] Emergency Volunteering Leave rejected <strong></p>
+      <p><strong>Title: Emergency Volunteering Scheme application update<strong></p>
 
-      <p>"Dear [LA-name]</p>
+      <p>"Dear [provider-name]</p>
       
-      <p>You rejected [provider-name]’s request for an Emergency Volunteering Scheme certification on behalf of [applicant-name].</p>
+      <p>[applicant name] recently applied for Emergency Volunteering Scheme certification.</p>
       
+      <p>Based on the information they provided, your Local Authority rejected the application, and it cannot progress at this time.</p>
+
       <p><strong>What happens next</strong></p>
       
-      <p>[provider-name] may contact you directly to find out why the application was rejected and ask if the applicant is able to re-apply."</p>
+      <p>You can ask [LA-name] why they rejected [applicant name]’s application and find out if they should re-apply."</p>
 
 
 
