updated the index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -56,20 +56,23 @@
                   <p>Need clear guidance what happens and work with content to provide more concrete content and design.</p>
                 </div>
               </details>
-            </li>
+            
+            
   
-            <li><a href="email-provider">Email to provider with a link to approve volunteer information</a>
-
+            <a href="email-provider">Email to provider with a link to approve volunteer information</a>
+<p></p>
             <li><a href="provider/v3/view-info-1">Provider checking volunteer information</a>
-              <li><a href="email-volunteer-rejected-by-provider">Email to volunteer they have been rejected by provider</a>
+              <br><a href="email-volunteer-rejected-by-provider">Email to volunteer they have been rejected by provider or Local Authority</a>
+              <br><a href="email-to-LA-to-approve">Email to Local Authority to approve volunteer and provider information </a></li>
 
-              <li><a href="email-to-LA-to-approve">Email to Local Authority (LA) to approve volunteer and provider information </a>
+<p></p>
 
 
             <li><a href="local-authority/v3/view-info-1">Local authority approving volunteer and provider info</a>
-              <li><a href="email-to-LA-after-approval">Email to Local Authority (LA) to confirm their own approval</a>
-                <li><a href="email-to-LA-after-rejecting">Email to Local Authority (LA) to confirm their own rejection</a>
-                  <li><a href="email-to-provider-after-rejected-from-LA">Email to provider to confirm rejection by Local Authority (LA)</a>
+              <br><a href="email-to-LA-after-approval">Email to Local Authority to confirm their own approval</a>
+                <br><a href="email-to-LA-after-rejecting">Email to Local Authority to confirm their own rejection</a>
+                  <br><a href="email-to-provider-after-rejected-from-LA">Email to provider to confirm rejection by Local Authority</a>
+                    <br><a href="https://docs.google.com/spreadsheets/d/1krpydni5GqjjitlifSp0lh57xE6u5XNULb0OjzUU1z4/edit#gid=0">Email to volunteer with their certificate</a>
 
           </ol>
 <br>
