are you sure pages inserted into prototype

--- a/app/views/local-authority/v3/view-info-1.html
+++ b/app/views/local-authority/v3/view-info-1.html
@@ -209,7 +209,7 @@
           Accept information
         </button>
 
-        <p><a href="rejected">Reject information</a></p>
+        <p><a href="are-you-sure">Reject information</a></p>
 
       <!-- <p><a href="rejected">Reject</a></p> --> 
       </form>
