--- a/app/views/provider/v3/view-info-1.html
+++ b/app/views/provider/v3/view-info-1.html
@@ -168,7 +168,7 @@
           Verify application
         </button>
 
-        <p><a href="rejected">Reject application</a></p>
+        <p><a href="are-you-sure">Reject application</a></p>
       </form>
 
     </div>
