content tweaks and updates

--- a/app/views/local-authority/v3/view-info-1.html
+++ b/app/views/local-authority/v3/view-info-1.html
@@ -44,15 +44,7 @@
           </dd>
          
         </div> --> 
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">
-            Job status
-          </dt>
-          <dd class="govuk-summary-list__value">
-            Unemployed
-          </dd>
-         
-        </div>
+       
         
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
@@ -88,6 +80,24 @@
           </dt>
           <dd class="govuk-summary-list__value">
             Birtley Care Home
+          </dd>
+          
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
+            Named contact
+          </dt>
+          <dd class="govuk-summary-list__value">
+            Margaret Stoke
+          </dd>
+          
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
+            Email address
+          </dt>
+          <dd class="govuk-summary-list__value">
+            m.stoke@bch.net
           </dd>
           
         </div>
