--- a/app/views/provider/v3/view-info-1.html
+++ b/app/views/provider/v3/view-info-1.html
@@ -146,7 +146,8 @@
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
           <label class="govuk-label govuk-checkboxes__label" for="waste-2">
-            I confirm that Sarah has a recent DBS certificate
+            I confirm that Sarah has provided a valid DBS certificate, to the level required, in place for the duration of the placement
+
           </label>
         </div>
         <div class="govuk-checkboxes__item">
