added furloughed worker as an option

--- a/app/views/v3/your-employment.html
+++ b/app/views/v3/your-employment.html
@@ -35,6 +35,10 @@
           text: "Employed"
         },
         {
+          value: "employed",
+          text: "Employed - furloughed"
+        },
+        {
           value: "selfemployed",
           text: "Self-employed"
         },
