content final tweaks to flows, more to come - up to the confirmation page for the provider

--- a/app/views/email-provider.html
+++ b/app/views/email-provider.html
@@ -33,7 +33,7 @@
       
       <p><a href="#">www.gov.uk/URL/displayed/here</a></p>
       
-      <p>If you approved the application, you will now need to tell us who the most suitable local authority is.
+      <p>If you approve the application, you will need to tell us who the relevant local authority or health authority is.
       
         <p>Best regards,
           <br>Emergency Volunteering Scheme</p>
