--- a/app/views/provider/v3/org-funding-2.html
+++ b/app/views/provider/v3/org-funding-2.html
@@ -15,15 +15,15 @@
 
       <h1 class="govuk-heading-xl">Confirm your local authority or health authority      </h1>
 
-      <p>Before an applicant can begin their placement, the application needs to be certified by the relevant local authority or health authority of your organisation.</p>
+      <p>Before a volunteer can begin their placement, the application needs to be certified by the relevant local authority or health authority of your organisation.</p>
       
       <p class="govuk-body">If the organisation you work for:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>provide social care, you report to the local authority</li>
-          <li>provide healthcare then you report to the health authority</li>
+          <li>provides social care, then you report to the local authority</li>
+          <li>provides healthcare, then you report to your Clinical Commission Group</li>
         </ul>
       
-        <p>If you are unsure then please choose a relevant Local Authority.</p>
+        <p>If you are unsure then please choose a relevant local authority.</p>
 
       <form class="form" action="confirmation">
 
