--- a/app/views/provider/v3/view-info-1.html
+++ b/app/views/provider/v3/view-info-1.html
@@ -14,7 +14,7 @@
 
       <h1 class="govuk-heading-xl">Verify application for Emergency Volunteering Scheme</h1>
 
-      <h2 class="govuk-heading-m">Applicant personal details</h2>
+      <h2 class="govuk-heading-m">Volunteer personal details</h2>
 
       <dl class="govuk-summary-list govuk-!-margin-bottom-9">
         <div class="govuk-summary-list__row">
@@ -153,7 +153,7 @@
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="mines">
           <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-            I can confirm this is a real placement and that the organisation I work for requires support for this placement
+            I confirm this is a real placement and that the organisation I work for requires support for this placement
           </label>
         </div>
        
