--- a/app/views/v3/confirmation.html
+++ b/app/views/v3/confirmation.html
@@ -22,8 +22,8 @@
 
       <h2 class="govuk-heading-m">What happens next</h2>
       <p>The contact for your placement will be emailed a link to verify your application. You may want to check they have received the email if you hope to start your placement within the next 7 days.</p>
-      <p>Your local authority will then approve the application, this is required for you to receive compensation or expense repayment. </p>
-      <p>Once you have completed your placement, return to to the guidance for <a href="#">Emergency Volunteering Scheme</a> to apply for compensation. This will be ready in time for the end of your placement.
+      <p>Your local authority or health authority will then approve the application, this is required for you to receive compensation.</p>
+      <p>We're currently working on Emergency Volunteering compensation ready for when you finish your placement. For updates, you can search for Emergency Volunteering Scheme on <a href="#">GOV.UK</a>.
       </p>
 
     </div>
