--- a/app/views/v3/start.html
+++ b/app/views/v3/start.html
@@ -35,7 +35,7 @@
       </h1>
 
 
-      <p>You can use this service to apply for an Emergency Volunteer certificate and help your local health and social care services. You will require a certificate to receive compensation.</p>
+      <p>You can use this service to apply for an Emergency Volunteer certificate and help your local health, community and social care services. You will require a certificate to receive compensation.</p>
 
       <p>If you’re employed, you will need the certificate to claim income loss compensation and evidence to your employer. If you’re unemployed, you will need the certificate to claim expenses.</p>
 
@@ -62,7 +62,7 @@
 
     <div class="govuk-grid-column-one-third">
 
-      <aside class="app-related-items" role="complementary">
+ <!--   <aside class="app-related-items" role="complementary">
         <h2 class="govuk-heading-m" id="subsection-title">
           Subsection
         </h2>
@@ -85,7 +85,7 @@
             </li>
           </ul>
         </nav>
-      </aside>
+      </aside> -->  
 
     </div>
   </div>
