--- a/app/views/v3/placement-details.html
+++ b/app/views/v3/placement-details.html
@@ -21,7 +21,7 @@
 
         {{ govukInput({
           label: {
-            text: "What is the name of the organisation you are applying to volunteer for?"
+            text: "What is the name of the organisation you want to volunteer for?"
           },
           classes: "govuk-input--width-20",
           id: "organisation-name",
@@ -49,7 +49,7 @@
 
         {{ govukInput({
           label: {
-            text: "What is their telephone number?"
+            text: "What is their telephone number? (optional)"
           },
           classes: "govuk-input--width-20",
           id: "organisation-telephone",
