--- a/app/views/v3/your-employment.html
+++ b/app/views/v3/your-employment.html
@@ -36,7 +36,7 @@
         },
         {
           value: "employed",
-          text: "Employed - furloughed"
+          text: "Furloughed worker"
         },
         {
           value: "selfemployed",
