final tweaks for content

--- a/app/views/local-authority/v3/view-info-1.html
+++ b/app/views/local-authority/v3/view-info-1.html
@@ -190,7 +190,7 @@
       <br>
       <br>
 
-      <h3 class="govuk-heading-m">I confirm the following statement:</h3>
+      <h3 class="govuk-heading-m">I confirm the following statements:</h3>
 
       <div class="govuk-checkboxes">
         <div class="govuk-checkboxes__item">
