--- a/app/views/provider/v3/view-info-1.html
+++ b/app/views/provider/v3/view-info-1.html
@@ -153,7 +153,7 @@
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="mines">
           <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-            I confirm this is a real placement and that the organisation I work for requires support for this placement
+            I confirm that this is a real placement and that the organisation I work for requires support for this placement
           </label>
         </div>
        
