--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
-        Apply for Emergency Volunteering Leave
+        Apply for Emergency Volunteering Scheme
         
       </h1>
         <p class="govuk-lede">
