re-organised folder structures. Now have v1-mvp with all files contained in that folder and have something there for v1-1 too.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,10 +20,33 @@
           <hr>
           <br>
 
-          <h2 class="govuk-heading-l">Full journey v3</h2>
+          <h2 class="govuk-heading-l">Full journey v1.1</h2>
           <ol class="govuk-list govuk-list--number">
-            <li><p><a href="v3/start">Volunteer applying for Emergency Volunteering Leave</a>
-              
+            <li><p><a href="v1-1/volunteer/start">Volunteer applying for Emergency Volunteering Leave</a>
+              <br><a href="v1-1/emails/to-provider.html">Email to provider with a link to approve volunteer information</a>
+            </li>
+
+            <li><a href="v1-1/provider/view-info-1">Provider checking volunteer information</a>
+              <br><a href="v1-1/emails/volunteer-rejected-by-provider.html">Email to volunteer they have been rejected by provider or Local Authority</a>
+              <br><a href="v1-1/emails/to-LA-to-approve">Email to Local Authority to approve volunteer and provider information </a></li>
+
+              <p></p>
+
+
+            <li><a href="v1-1/local-authority/view-info-1">Local authority approving volunteer and provider info</a>
+              <br><a href="v1-1/emails/to-LA-after-approval">Email to Local Authority to confirm their own approval</a>
+                <br><a href="v1-1/emails/to-LA-after-rejecting">Email to Local Authority to confirm their own rejection</a>
+                  <br><a href="v1-1/emails/to-provider-after-rejected-from-LA">Email to provider to confirm rejection by Local Authority</a>
+                    <br><a href="https://docs.google.com/spreadsheets/d/1krpydni5GqjjitlifSp0lh57xE6u5XNULb0OjzUU1z4/edit#gid=0">Email to volunteer with their certificate</a></li>
+
+          </ol>
+<br>
+<hr>
+<br>
+
+          <h2 class="govuk-heading-l">Full journey v1</h2>
+          <ol class="govuk-list govuk-list--number">
+            <li><p><a href="v1-mvp/volunteer/start">Volunteer applying for Emergency Volunteering Leave</a>
               <details class="govuk-details" data-module="govuk-details">
                 <summary class="govuk-details__summary">
                   <span class="govuk-details__summary-text">
@@ -55,31 +78,29 @@
                   <h3>Page 11 - Confirmation</h3>
                   <p>Need clear guidance what happens and work with content to provide more concrete content and design.</p>
                 </div>
-              </details>
-            
-            
+              </details> 
   
-            <a href="email-provider">Email to provider with a link to approve volunteer information</a>
-<p></p>
-            <li><a href="provider/v3/view-info-1">Provider checking volunteer information</a>
-              <br><a href="email-volunteer-rejected-by-provider">Email to volunteer they have been rejected by provider or Local Authority</a>
-              <br><a href="email-to-LA-to-approve">Email to Local Authority to approve volunteer and provider information </a></li>
+            <a href="v1-mvp/emails/to-provider.html">Email to provider with a link to approve volunteer information</a>
+            <p></p>
 
-<p></p>
+            <li><a href="v1-mvp/provider/view-info-1">Provider checking volunteer information</a>
+              <br><a href="v1-mvp/emails/volunteer-rejected-by-provider.html">Email to volunteer they have been rejected by provider or Local Authority</a>
+              <br><a href="v1-mvp/emails/to-LA-to-approve">Email to Local Authority to approve volunteer and provider information </a></li>
+
+              <p></p>
 
 
-            <li><a href="local-authority/v3/view-info-1">Local authority approving volunteer and provider info</a>
-              <br><a href="email-to-LA-after-approval">Email to Local Authority to confirm their own approval</a>
-                <br><a href="email-to-LA-after-rejecting">Email to Local Authority to confirm their own rejection</a>
-                  <br><a href="email-to-provider-after-rejected-from-LA">Email to provider to confirm rejection by Local Authority</a>
-                    <br><a href="https://docs.google.com/spreadsheets/d/1krpydni5GqjjitlifSp0lh57xE6u5XNULb0OjzUU1z4/edit#gid=0">Email to volunteer with their certificate</a>
+            <li><a href="v1-mvp/local-authority/view-info-1">Local authority approving volunteer and provider info</a>
+              <br><a href="v1-mvp/emails/to-LA-after-approval">Email to Local Authority to confirm their own approval</a>
+                <br><a href="v1-mvp/emails/to-LA-after-rejecting">Email to Local Authority to confirm their own rejection</a>
+                  <br><a href="v1-mvp/emails/to-provider-after-rejected-from-LA">Email to provider to confirm rejection by Local Authority</a>
+                    <br><a href="https://docs.google.com/spreadsheets/d/1krpydni5GqjjitlifSp0lh57xE6u5XNULb0OjzUU1z4/edit#gid=0">Email to volunteer with their certificate</a></li>
 
           </ol>
 <br>
 <hr>
-<br>
 
-          <h2 class="govuk-heading-l">Full journey v2</h2>
+   <!--     <h2 class="govuk-heading-l">Full journey v2</h2>
             <ol class="govuk-list govuk-list--number">
               <li><p><a href="v2/start">Volunteer applying for Emergency Volunteering Leave</a>
                 
@@ -132,7 +153,7 @@
 
       
      <p><a href="v1/start">Prototype version 1 (only volunteer flow)</a><br>
-     Version of prototype assembled by NHSX</p>
+     Version of prototype assembled by NHSX</p> -->  
 
       
     </div>
