--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,6 +21,7 @@
           <br>
 
           <h2 class="govuk-heading-l">Full journey v1.1</h2>
+          <p>Last updated: Friday 3rd April 2020</p>
           <ol class="govuk-list govuk-list--number">
             <li><p><a href="v1-1/volunteer/start">Volunteer applying for Emergency Volunteering Leave</a>
               <br><a href="v1-1/emails/to-provider.html">Email to provider with a link to approve volunteer information</a>
