--- a/app/views/v1-1/local-authority/view-info-1.html
+++ b/app/views/v1-1/local-authority/view-info-1.html
@@ -166,6 +166,12 @@
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses" checked disabled>
           <label class="govuk-label govuk-checkboxes__label" for="waste">
+            that the health and social care provider has confirmed they have the correct indemnity arrangements to cover the volunteer during the placement
+          </label>
+        </div>
+        <div class="govuk-checkboxes__item">
+          <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses" checked disabled>
+          <label class="govuk-label govuk-checkboxes__label" for="waste">
             have checked the applicant has the right experience for the role
           </label>
         </div>
@@ -190,7 +196,7 @@
       <br>
       <br>
 
-      <h3 class="govuk-heading-m">I confirm the following statements:</h3>
+      <h3 class="govuk-heading-m">Please confirm the following statements:</h3>
 
       <div class="govuk-checkboxes">
         <div class="govuk-checkboxes__item">
