--- a/app/views/v1-1/provider/view-info-1.html
+++ b/app/views/v1-1/provider/view-info-1.html
@@ -140,6 +140,11 @@
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
           <label class="govuk-label govuk-checkboxes__label" for="waste">
+            I confirm that the organisation I work for has the correct indemnity arrangements to cover the volunteer during their placement</label>
+        </div>
+        <div class="govuk-checkboxes__item">
+          <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
+          <label class="govuk-label govuk-checkboxes__label" for="waste">
             I confirm that Sarah has the necessary skills or experience for the placement
           </label>
         </div>
