update email signatures in v1-1 so they're all consistent. Taken out "best regards"

--- a/app/views/v1-1/emails/to-LA-after-approval.html
+++ b/app/views/v1-1/emails/to-LA-after-approval.html
@@ -31,7 +31,7 @@
       
       <p><a href="#">Link to certifcate goes here</a>"</p>
 
-
+      <br><p>Emergency Volunteering Scheme</p>
 
       
       
