--- a/app/views/v1-1/emails/to-LA-after-rejecting.html
+++ b/app/views/v1-1/emails/to-LA-after-rejecting.html
@@ -32,7 +32,7 @@
       <p>[provider-name] may contact you directly to find out why the application was rejected and ask if the applicant is able to re-apply."</p>
 
 
-
+      <br><p>Emergency Volunteering Scheme</p>
       
       
 
