--- a/app/views/v1-1/emails/to-provider-after-rejected-from-LA.html
+++ b/app/views/v1-1/emails/to-provider-after-rejected-from-LA.html
@@ -33,8 +33,7 @@
       
       <p>You can ask [LA-name] why they rejected [applicant name]’s application and find out if they should re-apply."</p>
 
-
-
+      <br><p>Emergency Volunteering Scheme</p>
       
       
 
