--- a/app/views/v1-1/emails/to-provider.html
+++ b/app/views/v1-1/emails/to-provider.html
@@ -35,8 +35,7 @@
       
       <p>If you approve the application, you will need to tell us who the relevant local authority or health authority is.
       
-        <p>Best regards,
-          <br>Emergency Volunteering Scheme</p>
+          <br><p>Emergency Volunteering Scheme</p>
       
       
 
