--- a/app/views/v1-1/emails/to-volunteer-rejected-by-provider.html
+++ b/app/views/v1-1/emails/to-volunteer-rejected-by-provider.html
@@ -33,9 +33,8 @@
 
       <p>You can ask your original contact who you arranged your volunteering opportunity with about why this was rejected and if you should re-apply.</p>
             
-      
-        <p>Best regards,
-          <br>Emergency Volunteering Scheme</p>
+    
+          <br><p>Emergency Volunteering Scheme</p>
       
       
 
