updated v1-1 volunteer start page content

--- a/app/views/v1-1/volunteer/start.html
+++ b/app/views/v1-1/volunteer/start.html
@@ -31,15 +31,33 @@
 
       <h1 class="govuk-heading-xl">
         
-  {% if serviceName %} {{ serviceName }} {% endif %} 
+        Apply for a certificate to take part in the Emergency Volunteering Scheme
       </h1>
 
 
-      <p>You can use this service to apply for an Emergency Volunteer certificate and help your local health, community and social care services. You will require a certificate to receive compensation.</p>
+      <p>Use this service to apply for an emergency leave certificate. This certificate will mean the following:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>if you’re working at the moment, you can confirm to your employer that you will be taking  time off to take part in the scheme</li>
+        <li>lets you claim compensation once you’ve finished volunteering whether you’re working or not</li>
+      </ul>
 
-      <p>If you’re employed, you will need the certificate to claim income loss compensation and evidence to your employer. If you’re unemployed, you will need the certificate to claim expenses.</p>
+      <p>Before you apply, <a href="#">read the guidance on applying to the Emergency Volunteering Scheme</a>. [link tbc]</p>
 
-      <p>Registering takes around 5 minutes. You can only use this service once.</p>
+      <h2 class="govuk-heading-m">Who can apply</h2>
+
+      <p>To apply, you must:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>have a specific placement agreed with a care provider, lasting 2 to 4 weeks</li>
+        <li>have worked in health or social care in the past, or have relevant experience</li>
+      </ul>
+
+      <h2 class="govuk-heading-m">What you'll need</h2>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>your National Insurance number</li>
+        <li>the name, address and phone number of the care provider you’ll be volunteering with</li>
+      </ul>
+
+
 
       <a href=your-details role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
         Start now
@@ -50,14 +68,12 @@
 
       <h2 class="govuk-heading-m">Before you start</h2>
 
-      <p>You will need:</p>
+      <p>It takes around 5 minutes to apply.</p>
 
-      <ul class="govuk-list govuk-list--bullet">
-        <li>to know about a volunteering placement within your local community</li>
-        <li>the telephone number and email of your contact for the placement</li>
-      </ul>
-      <p>Ideally, you will have a DBS certificate number from a check within the last 12 months. </p>
-      <p>There is revised guidance on new DBS checks within the guidance for the Emergency Volunteering Scheme. </p>
+      <p>You’re not guaranteed a certificate - the local authority or health authority and care provider will need to approve your application.</p>
+
+      <p>If you’re working at the moment you must give your current employer at least 3 working days notice from when you receive your certificate.</p>
+
   </div>
 
     <div class="govuk-grid-column-one-third">
