Updated the date input to play back inputs in CYA's in "1 January 2020" format

--- a/app/views/v1-1/local-authority/view-info-1.html
+++ b/app/views/v1-1/local-authority/view-info-1.html
@@ -155,7 +155,7 @@
             Planned start date
           </dt>
           <dd class="govuk-summary-list__value">
-            16 04 2020
+            16 April 2020
           </dd>
           
         </div>
