Sweeped through all of the designs and removed the word "applicant" and replaced it with "volunteer". The word "application" is still used as it refers to the entire process.

--- a/app/views/v1-1/emails/to-LA-after-rejecting.html
+++ b/app/views/v1-1/emails/to-LA-after-rejecting.html
@@ -29,7 +29,7 @@
       
       <p><strong>What happens next</strong></p>
       
-      <p>[provider-name] may contact you directly to find out why the application was rejected and ask if the applicant is able to re-apply."</p>
+      <p>[provider-name] may contact you directly to find out why the volunteer was rejected and ask if the applicant is able to re-apply."</p>
 
 
       <br><p>Emergency Volunteering Scheme</p>
