--- a/app/views/v1-1/emails/to-LA-to-approve.html
+++ b/app/views/v1-1/emails/to-LA-to-approve.html
@@ -31,7 +31,7 @@
       
       <p><a href="#">https://evl-certifcate.gov.uk/login</a></p>
 
-      <p>If the applicant is employed, they will be able to start volunteering three days after the application is approved. If they are unemployed, they will be able to start volunteering as soon as their application is approved."</p>
+      <p>If the volunteer is employed, they will be able to start volunteering three days after the application is approved. If they are unemployed, they will be able to start volunteering as soon as their application is approved."</p>
 
       <br><p>Emergency Volunteering Scheme</p>
 
