--- a/app/views/v1-1/local-authority/view-info-1.html
+++ b/app/views/v1-1/local-authority/view-info-1.html
@@ -172,13 +172,13 @@
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses" checked disabled>
           <label class="govuk-label govuk-checkboxes__label" for="waste">
-            have checked the applicant has the right experience for the role
+            have checked the volunteer has the right experience for the role
           </label>
         </div>
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines" checked disabled>
           <label class="govuk-label govuk-checkboxes__label" for="waste-2">
-            have or will check the applicant is eligible to work (checked DBS)
+            have or will check the volunteer is eligible to work (checked DBS)
           </label>
         </div>
         <div class="govuk-checkboxes__item">
