we have removed the word "relevant" from the phrase "relevant local/health authority" from the service and replaced it with "appropriate".

--- a/app/views/v1-1/provider/org-funding-2.html
+++ b/app/views/v1-1/provider/org-funding-2.html
@@ -13,9 +13,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">Tell us who the relevant local authority or health authority is</h1>
+      <h1 class="govuk-heading-xl">Tell us who the appropriate local authority or health authority is</h1>
 
-      <p>Before a volunteer can begin their placement, their application needs to be certified. If they are providing social care services they will be certified by the relevant local authority, if health services they will be certified by the relevant clinical commissioning group.      </p>
+      <p>Before a volunteer can begin their placement, their application needs to be certified. If they are providing social care services they will be certified by the appropriate local authority, if health services they will be certified by the appropriate clinical commissioning group.      </p>
       
   <!--   <p class="govuk-body">If the organisation you work for:</p>
         <ul class="govuk-list govuk-list--bullet">
@@ -29,7 +29,7 @@
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="event-name">
-            Name of your relevant local authority or clinical commissioning group
+            Name of your appropriate local authority or clinical commissioning group
           </label>
           <input class="govuk-input" id="event-name" name="event-name" type="text">
         </div>
@@ -41,7 +41,7 @@
         name: "dbs-certificate-number"
       }) }} -->
 
-      <p>When you submit this information, a point of contact within the relevant organisation will be asked to verify the placement.</p>
+      <p>When you submit this information, a point of contact within the appropriate organisation will be asked to verify the placement.</p>
 
         <button class="govuk-button" data-module="govuk-button">Send application to be certified</button>
 
