removing "clinical commission group" with "health authority. This is just reverting back to what we had in the first place but legal and policy had some input but it's been reverted.

--- a/app/views/v1-1/provider/org-funding-2.html
+++ b/app/views/v1-1/provider/org-funding-2.html
@@ -15,7 +15,7 @@
 
       <h1 class="govuk-heading-xl">Tell us who the appropriate local authority or health authority is</h1>
 
-      <p>Before a volunteer can begin their placement, their application needs to be certified. If they are providing social care services they will be certified by the appropriate local authority, if health services they will be certified by the appropriate clinical commissioning group.      </p>
+      <p>Before a volunteer can begin their placement, their application needs to be certified. If they are providing social care services they will be certified by the appropriate local authority, if health services they will be certified by the appropriate health authority. </p>
       
   <!--   <p class="govuk-body">If the organisation you work for:</p>
         <ul class="govuk-list govuk-list--bullet">
@@ -29,7 +29,7 @@
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="event-name">
-            Name of your appropriate local authority or clinical commissioning group
+            Name of your appropriate local authority or health authority
           </label>
           <input class="govuk-input" id="event-name" name="event-name" type="text">
         </div>
