updated job status options

--- a/app/views/v1-1/volunteer/your-employment.html
+++ b/app/views/v1-1/volunteer/your-employment.html
@@ -31,15 +31,19 @@
         },
         items: [
         {
-          value: "employed",
-          text: "Employed"
+          value: "working-full-time",
+          text: "Working full time"
         },
         {
-          value: "employed",
-          text: "Furloughed worker"
+          value: "working-part-time",
+          text: "Working part-time"
         },
         {
-          value: "selfemployed",
+          value: "furloughed",
+          text: "Not working and on furlough"
+        },
+        {
+          value: "self-employed",
           text: "Self-employed"
         },
         {
@@ -47,8 +51,8 @@
           text: "Retired"
         },
         {
-          value: "Unemployed",
-          text: "Unemployed"
+          value: "not-working",
+          text: "Not working"
         }
       ]
       }) }}
