updates to the checkbox statements in the provider and local authority section.

--- a/app/views/v1-1/local-authority/view-info-1.html
+++ b/app/views/v1-1/local-authority/view-info-1.html
@@ -160,33 +160,33 @@
           
         </div>
       </dl>
-      <h3 class="govuk-heading-m">The provider has declared that they:</h3>
+      <h3 class="govuk-heading-m">The health and social care provider has declared that they:</h3>
 
       <div class="govuk-checkboxes">
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses" checked disabled>
           <label class="govuk-label govuk-checkboxes__label" for="waste">
-            that the health and social care provider has confirmed they have the correct indemnity arrangements to cover the volunteer during the placement
+            have the correct insurance and indemnity arrangements in place to cover the volunteer during the placement
           </label>
         </div>
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses" checked disabled>
           <label class="govuk-label govuk-checkboxes__label" for="waste">
-            have checked the volunteer has the right experience for the role
+            have checked and are satisfied that the volunteer has the suitable skills and/or experience for the role
           </label>
         </div>
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines" checked disabled>
           <label class="govuk-label govuk-checkboxes__label" for="waste-2">
-            have or will check the volunteer is eligible to work (checked DBS)
+            have, or will, check that the volunteer is eligible to work (checked DBS) have a genuine placement that they need to fill
           </label>
         </div>
-        <div class="govuk-checkboxes__item">
+  <!--    <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines" checked disabled>
           <label class="govuk-label govuk-checkboxes__label" for="waste-2">
             confirm that this is a real placement that they need to fill          
           </label>
-        </div>
+        </div> --> 
        
       </div>
 
@@ -196,13 +196,21 @@
       <br>
       <br>
 
+  
+
       <h3 class="govuk-heading-m">Please confirm the following statements:</h3>
 
       <div class="govuk-checkboxes">
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
           <label class="govuk-label govuk-checkboxes__label" for="waste">
-            that the health and social care service provider has indemnity insurance
+            I confirm that I am authorised by the health or local authority to make these statements.
+          </label>
+        </div>
+        <div class="govuk-checkboxes__item">
+          <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
+          <label class="govuk-label govuk-checkboxes__label" for="waste">
+            that the health and social care service provider has liability and indemnity insurance
           </label>
         </div>
         <div class="govuk-checkboxes__item">
