--- a/app/views/v1-1/provider/view-info-1.html
+++ b/app/views/v1-1/provider/view-info-1.html
@@ -134,9 +134,16 @@
         </div>
       </dl>
 
+     
+<br>
       <p><strong>Please confirm the following statements:</strong></p>
 
-      <div class="govuk-checkboxes">
+   <div class="govuk-checkboxes">
+        <div class="govuk-checkboxes__item">
+          <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="mines">
+          <label class="govuk-label govuk-checkboxes__label" for="waste-3">
+            I confirm that I am authorised by my organisation to make these statements.</label>
+        </div>
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
           <label class="govuk-label govuk-checkboxes__label" for="waste">
@@ -152,15 +159,9 @@
           <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
           <label class="govuk-label govuk-checkboxes__label" for="waste-2">
             I confirm that Sarah has provided a valid DBS certificate, to the level required, in place for the duration of the placement
-
           </label>
         </div>
-        <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="mines">
-          <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-            I confirm that this is a real placement and that the organisation I work for requires support for this placement
-          </label>
-        </div>
+      
        
       </div>
 
