added certificate email in HTML format on prototype. updated volunteer start page with URL link

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -38,7 +38,7 @@
               <br><a href="v1-1/emails/to-LA-after-approval">Email to Local Authority to confirm their own approval</a>
                 <br><a href="v1-1/emails/to-LA-after-rejecting">Email to Local Authority to confirm their own rejection</a>
                   <br><a href="v1-1/emails/to-provider-after-rejected-from-LA">Email to provider to confirm rejection by Local Authority</a>
-                    <br><a href="https://docs.google.com/spreadsheets/d/1krpydni5GqjjitlifSp0lh57xE6u5XNULb0OjzUU1z4/edit#gid=0">Email to volunteer with their certificate</a></li>
+                    <br><a href="v1-1/emails/to-volunteer-certificate">Email to volunteer with their certificate</a></li>
 
           </ol>
 <br>
