--- a/app/views/v1-1/volunteer/start.html
+++ b/app/views/v1-1/volunteer/start.html
@@ -41,7 +41,7 @@
         <li>lets you claim compensation once you’ve finished volunteering whether you’re working or not</li>
       </ul>
 
-      <p>Before you apply, <a href="#">read the guidance on applying to the Emergency Volunteering Scheme</a>. [link tbc]</p>
+      <p>Before you apply, read the <a href="https://www.gov.uk/guidance/guidance-on-the-emergency-volunteering-scheme">guidance on applying to the Emergency Volunteering Scheme</a>.</p>
 
       <h2 class="govuk-heading-m">Who can apply</h2>
 
